# gloxinia2

./: .gitignore  README.md
concept/: board_pcb_structure.tex  front_view.tex
docs/: hardware.md  overview.md
docs/memory-layout/: memory-layout.tex
enclosure/: lid.scad  part1.scad  part3.scad  support_structure.scad
firmware/can_bootloader.X/: app_image.c  app_image.h  bootloader_commands.c  bootloader_verification.c  can2.c  can2.h  can_bootloader.c  can_bootloader.h  can_bootloader.mc3  flash_memory.h  flash_memory.s  hardware_interrupt_table.S  interrupts.S  main.c  memory_partition.S  pin_manager.c  pin_manager.h  traps.h  uart_bootloader.mc3
firmware/dicio.X/: README.md  actuator_growth_chamber.c  actuator_relay_board.c  actuator_relay_board.h  actuators.c  actuators.h  dicio.c  dicio.h  dicio.mc3  dicio_adc12_filters.c  dicio_adc12_filters.h  dicio_debug.mc3  dicio_message.c  dicio_storage.c  main.c  message_dicio.c  module.c  module.h  module_sylvatica.c  sdcard.c  sdcard.h  sensor_apds9301.c  sensor_apds9306_065.c  sensor_bh1721fvc.c  sensor_bh1721fvc.h  sensor_ds18b20.c  sensor_licor.c  sensor_licor.h  sensor_nau7802.c  sensor_opt3001q1.c  sensor_planalta.h  sensor_sht35.c  sensor_sht35.h  sensor_sylvatica.h  sensor_sylvatica2.h  sensors.c  sensors.h  spi1.c  spi1.h  traps.h  (+2 more)
firmware/dicio2.X/: dicio.c  dicio.h  dicio2.mc3  main.c  traps.c  traps.h  watchdog.h
firmware/dicio_debug.X/: dicio.c  dicio_debug.mc3  sdcard.c
firmware/lib/: actuator_common.c  actuator_common.h  adc.c  adc.h  address.c  address.h  can.c  can.h  dspcommon.inc  event_controller.c  event_controller.h  fir_common.h  i2c.c  i2c.h  i2c_controllers.c  i2c_slave.c  message.c  message.h  one_wire.c  one_wire.h  pga.c  pga.h  planalta_definitions.h  sensor_common.c  sensor_common.h  spi.c  traps.c  uart.c  uart.h  uart_common.c  uart_common.h  uart_logging.h  utilities.c  utilities.h
firmware/lib2/: adc.c  adc.h  adc16.c  adc16.h  address.c  address.h  can.c  can.h  clock.c  clock.h  dac.c  dac.h  event_controller.c  event_controller.h  filtering.h  fir_common.h  fir_compressed.s  i2c.c  i2c.h  i2c_controller.c  message.c  message.h  pga.c  pga.h  rtcc.c  rtcc.h  sensor.c  sensor.h  sensor_adc12.c  sensor_adc12.h  sensor_adc16.c  sensor_adc16.h  sensor_ads1219.c  sensor_ads1219.h  sensor_analog.h  sensor_apds9306_065.c  sensor_apds9306_065.h  sensor_common.h  sensor_lia.c  sensor_lia.h  (+10 more)
firmware/planalta.X/: README.md  dac.c  dac.h  fir_coeffs.s  hex_dac_value_computation.py  main.c  planalta.c  planalta.h  planalta2.mc3  planalta_calibration.c  planalta_definitions.h  planalta_filter_coefficients.s  planalta_filter_definitions.c  planalta_filtering.c  planalta_filtering_10khz.c  planalta_filtering_20khz.c  planalta_filtering_25khz.c  planalta_filtering_50khz.c  planalta_filtering_5khz.c  planalta_filters.h  planalta_freq_sweep.c  planalta_fs_200hz_100hz_50hz.c  planalta_fs_20hz_10hz.c  planalta_fs_20khz_10khz_5khz.c  planalta_fs_2khz_1khz_500hz.c  planalta_fs_50khz.c
firmware/planalta2.X/: dac.c  dac.h  main.c  planalta.c  planalta.h  planalta_dac.c  planalta_definitions.h  planalta_filter_coefficients.s  planalta_filter_definitions.c  planalta_filtering_10khz.c  planalta_filtering_25khz.c  planalta_filtering_50khz.c  planalta_filtering_5khz.c  planalta_filters.h
firmware/sylvatica.X/: filters_sylvatica.h  fir_coeffs.h  main.c  sylvatica.c  sylvatica.h  sylvatica_calibration.c
firmware/sylvatica2.X/: main.c  sylvatica.c  sylvatica.h  sylvatica2.mc3  sylvatica_adc12_filters.c  sylvatica_adc16_filters.c  sylvatica_filter_coefficients.s  veccopyjump.s
firmware/uart_bootloader.X/: app_image.c  app_image.h  bootloader.c  bootloader.h  bootloader_commands.c  bootloader_config.h  bootloader_verification.c  can2.c  can2.h  flash.h  flash_memory.h  interrupts.S  main.c  mcc.c  pin_manager.c  uart1.c  uart1.h  uart_bootloader.c  uart_bootloader.h  uart_bootloader.mc3  watchdog.h
gui/: index.html  live_plot.py
gui/src/: GMessage.ts  main.ts  preload.ts  renderer.ts  sensors.ts
gui_electron/: package-lock.json  package.json
gui_qt/GloxiniaConfigurator/: CMakeLists.txt  configuresht35dialog.cpp  configuresht35dialog.h  configuresht35dialog.ui  default.txt  exampleConfig.txt  gcfileoperations.cpp  gcmessagehandling.cpp  gcnode.cpp  gcnode.h  gcreadoutdialog.cpp  gcreadoutdialog.h  gcreadoutdialog.ui  gcsample.cpp  gcsample.h  gcsamplepoint.cpp  gcsamplepoint.h  gcsensor.cpp  gcsensor.h  gcserialcommunication.cpp  gcsystem.cpp  gcsystem.h  gdevicecommunication.cpp  gdevicecommunication.h  gliaengine.cpp  gliaengine.h  globalmeasurementpolicydialog.cpp  globalmeasurementpolicydialog.h  globalmeasurementpolicydialog.ui  gloxiniaconfigurator.cpp  gloxiniaconfigurator.h  gloxiniaconfigurator.ui  gmessage.cpp  gmessage.h  liaenginedialog.cpp  liaenginedialog.h  liaenginedialog.ui  main.cpp  measurementsettingsdialog.cpp  measurementsettingsdialog.h  (+56 more)
gui_qt/GloxiniaConfigurator2/: gcmodel.cpp  gcmodel.h  gcnode.cpp  gcnode.h  gcsensor.cpp  gcsensor.h  gloxiniaconfigurator.cpp  gloxiniaconfigurator.h
gui_qt/gloxinia-configurator/: CMakeLists.txt  main.cpp  mainwindow.ui
pcb_design/: custom_components.kicad_sym
pcb_design/BOM/: merge-orders.py
pcb_design/custom_footprints.pretty/: 6P_1EP_DFN_2.45x2.45mm.kicad_mod  8P-1EP-DFN_2.5x2.5.kicad_mod  AMPHENOL_124018612112A.kicad_mod  APDS-9306-065.kicad_mod  DFN_12_Pin_2.7x3mm_P0.5mm.kicad_mod  EXT_USB_C_HEADER.kicad_mod  Enclosure-Gloxinia2.kicad_mod  Enclosure-Gloxinia2_lr.kicad_mod  Enclosure-Gloxinia3.kicad_mod  Enclosure-Gloxinia4.kicad_mod  Enclosure-Gloxinia_front.kicad_mod  Enclosure-Gloxinia_small.kicad_mod  GloxiniaMovableMountingHole.kicad_mod  JLCPCB_ASSEMBLY_TOOL_HOLE.kicad_mod  LGA10_5x5mm_21-100481.kicad_mod  L_6.5mmx4.5mm_Bourns.kicad_mod  L_L4mm_D4mm_H1.8mm.kicad_mod  SJ-3524-SMT-TR.kicad_mod  SMTM1225.kicad_mod  SOIC-16_25.75x18.75mm_P2.5mm.kicad_mod  SolderJumper-4_Open_Pad1.0x1.5mm.kicad_mod  USON-2x2mm-6P-1EP.kicad_mod  (+6 more)
pygloxinia/: gloxinia_logger.py  parse_sensor_data.py
radiation_shield/: radiation_shield.scad
(+218 files in other folders)
